dejar directorio data-ejemplo

--- a/notebooks/ejemplo_minio.ipynb
+++ b/notebooks/ejemplo_minio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -53,14 +53,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "capacitacion-lago-datos/2024-10-03T11-07_export.csv\n"
+      "capacitacion-lago-datos/data\n",
+      "capacitacion-lago-datos/replica_0.parquet\n",
+      "capacitacion-lago-datos/replica_1.parquet\n",
+      "capacitacion-lago-datos/replica_2.parquet\n",
+      "capacitacion-lago-datos/replica_3.parquet\n",
+      "capacitacion-lago-datos/replica_4.parquet\n",
+      "capacitacion-lago-datos/replica_5.parquet\n",
+      "capacitacion-lago-datos/replica_6.parquet\n",
+      "capacitacion-lago-datos/replica_7.parquet\n",
+      "capacitacion-lago-datos/replica_8.parquet\n",
+      "capacitacion-lago-datos/replica_9.parquet\n"
      ]
     }
    ],
@@ -82,9 +92,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   x   y\n",
+       "0  0   3\n",
+       "1  1   4\n",
+       "2  2   5\n",
+       "3  3   6\n",
+       "4  4   7\n",
+       "5  5   8\n",
+       "6  6   9\n",
+       "7  7  10\n",
+       "8  8  11\n",
+       "9  9  12"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Columnas de juguete\n",
     "x = [i for i in range(10)]\n",
@@ -92,12 +201,13 @@
     "\n",
     "# Escribir archivo con pandas\n",
     "df = pd.DataFrame({\"x\": x, \"y\": y})\n",
-    "df.to_parquet(\"../data/df_ejemplo.parquet\")\n"
+    "df.to_parquet(\"../data/df_ejemplo.parquet\")\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +216,7 @@
     "file = \"df_ejemplo.parquet\"\n",
     "source_folder = \"../data\"\n",
     "\n",
-    "minio_path = f\"{bucket}/{file}\"\n",
+    "minio_path = f\"{bucket}/data-ejemplo/{file}\"\n",
     "local_path = f\"{source_folder}/{file}\"\n",
     "s3.put_file(rpath=minio_path,lpath=local_path)"
    ]
@@ -120,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -179,43 +289,154 @@
     "bucket = \"capacitacion-lago-datos\"\n",
     "for file in parquet_files:\n",
     "    print(f\"--------- Escribiendo en S3 archivo {file}\")\n",
-    "    rpath = f\"{bucket}/{file}\"\n",
+    "    minio_path = f\"{bucket}/data-ejemplo/{file}\"\n",
     "    file_path = f\"../data/{file}\"\n",
-    "    s3.put_file(lpath=file_path,rpath=rpath)\n",
+    "    s3.put_file(lpath=file_path,rpath=minio_path)\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "capacitacion-lago-datos/df_ejemplo.parquet\n",
-      "capacitacion-lago-datos/replica_0.parquet\n",
-      "capacitacion-lago-datos/replica_1.parquet\n",
-      "capacitacion-lago-datos/replica_2.parquet\n",
-      "capacitacion-lago-datos/replica_3.parquet\n",
-      "capacitacion-lago-datos/replica_4.parquet\n",
-      "capacitacion-lago-datos/replica_5.parquet\n",
-      "capacitacion-lago-datos/replica_6.parquet\n",
-      "capacitacion-lago-datos/replica_7.parquet\n",
-      "capacitacion-lago-datos/replica_8.parquet\n",
-      "capacitacion-lago-datos/replica_9.parquet\n"
+      "capacitacion-lago-datos/data-ejemplo/df_ejemplo.parquet\n",
+      "capacitacion-lago-datos/data-ejemplo/replica_0.parquet\n",
+      "capacitacion-lago-datos/data-ejemplo/replica_1.parquet\n",
+      "capacitacion-lago-datos/data-ejemplo/replica_2.parquet\n",
+      "capacitacion-lago-datos/data-ejemplo/replica_3.parquet\n",
+      "capacitacion-lago-datos/data-ejemplo/replica_4.parquet\n",
+      "capacitacion-lago-datos/data-ejemplo/replica_5.parquet\n",
+      "capacitacion-lago-datos/data-ejemplo/replica_6.parquet\n",
+      "capacitacion-lago-datos/data-ejemplo/replica_7.parquet\n",
+      "capacitacion-lago-datos/data-ejemplo/replica_8.parquet\n",
+      "capacitacion-lago-datos/data-ejemplo/replica_9.parquet\n"
      ]
     }
    ],
    "source": [
     "# Revisemos que todo haya quedado bien escrito\n",
-    "files = s3.ls('capacitacion-lago-datos')\n",
+    "files = s3.ls('capacitacion-lago-datos/data-ejemplo')\n",
     "\n",
     "# Imprimir archivos dentro del bucket\n",
     "for file in files:\n",
     "    print(file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   x   y\n",
+       "0  0   3\n",
+       "1  1   4\n",
+       "2  2   5\n",
+       "3  3   6\n",
+       "4  4   7\n",
+       "5  5   8\n",
+       "6  6   9\n",
+       "7  7  10\n",
+       "8  8  11\n",
+       "9  9  12"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Leer un archivo desde minio\n",
+    "minio_path = \"s3://capacitacion-lago-datos/data-ejemplo/df_ejemplo.parquet\"\n",
+    "parquet_example = pd.read_parquet(minio_path, filesystem=s3)\n",
+    "parquet_example"
    ]
   }
  ],
