actualizar nombre archivos

--- a/notebooks/ejemplo_minio.ipynb
+++ b/notebooks/ejemplo_minio.ipynb
@@ -2,26 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importar dependencias\n",
-    "\n",
     "from s3fs.core import S3FileSystem\n",
     "import pandas as pd\n",
-    "import os\n"
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Agregar credenciales\n",
-    "access = \"***\" # reemplazar por credenciales\n",
-    "secret = \"***\" # reemplazar por credenciales\n",
+    "access = \"capacitacion\" # reemplazar por credenciales\n",
+    "secret = \"capacitacion\" # reemplazar por credenciales\n",
     "s3 = S3FileSystem(\n",
     "    key=access,\n",
     "    secret=secret,\n",
@@ -31,17 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "capacitacion-lago-datos\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exploremos nuestra conexión\n",
     "buckets = s3.ls('')\n",
@@ -53,27 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "capacitacion-lago-datos/df_ejemplo.parquet\n",
-      "capacitacion-lago-datos/replica_0.parquet\n",
-      "capacitacion-lago-datos/replica_1.parquet\n",
-      "capacitacion-lago-datos/replica_2.parquet\n",
-      "capacitacion-lago-datos/replica_3.parquet\n",
-      "capacitacion-lago-datos/replica_4.parquet\n",
-      "capacitacion-lago-datos/replica_5.parquet\n",
-      "capacitacion-lago-datos/replica_6.parquet\n",
-      "capacitacion-lago-datos/replica_7.parquet\n",
-      "capacitacion-lago-datos/replica_8.parquet\n",
-      "capacitacion-lago-datos/replica_9.parquet\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Veamos los archivos dentro de un bucket\n",
     "files = s3.ls('capacitacion-lago-datos')\n",
@@ -92,128 +65,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   x   y\n",
-       "0  0   3\n",
-       "1  1   4\n",
-       "2  2   5\n",
-       "3  3   6\n",
-       "4  4   7\n",
-       "5  5   8\n",
-       "6  6   9\n",
-       "7  7  10\n",
-       "8  8  11\n",
-       "9  9  12"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Columnas de juguete\n",
+    "mi_nombre = \"kl\"\n",
+    "\n",
     "x = [i for i in range(10)]\n",
     "y = [i + 3 for i in range(10)]\n",
     "\n",
     "# Escribir archivo con pandas\n",
     "df = pd.DataFrame({\"x\": x, \"y\": y})\n",
-    "df.to_parquet(\"../data/df_ejemplo.parquet\")\n",
+    "df.to_parquet(f\"../data/df_ejemplo_{mi_nombre}.parquet\")\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Escribir en minio el archivo parquet\n",
     "bucket = \"capacitacion-lago-datos\"\n",
-    "file = \"df_ejemplo.parquet\"\n",
+    "file = f\"df_ejemplo_{mi_nombre}.parquet\"\n",
     "source_folder = \"../data\"\n",
     "\n",
     "minio_path = f\"{bucket}/data-ejemplo/{file}\"\n",
@@ -230,26 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Escribiendo archivo 0\n",
-      "Escribiendo archivo 1\n",
-      "Escribiendo archivo 2\n",
-      "Escribiendo archivo 3\n",
-      "Escribiendo archivo 4\n",
-      "Escribiendo archivo 5\n",
-      "Escribiendo archivo 6\n",
-      "Escribiendo archivo 7\n",
-      "Escribiendo archivo 8\n",
-      "Escribiendo archivo 9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Contiene el archivo creado manualmente\n",
     "original_file =  pd.read_parquet(local_path)\n",
@@ -257,68 +116,32 @@
     "# Vamos a escribir varias veces el mismo archivo\n",
     "for i in range(10):\n",
     "    print(f\"Escribiendo archivo {i}\")\n",
-    "    original_file.to_parquet(f\"../data/replica_{i}.parquet\")     "
+    "    original_file.to_parquet(f\"../data/replica_{i}_{mi_nombre}.parquet\")     "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--------- Escribiendo en S3 archivo replica_7.parquet\n",
-      "--------- Escribiendo en S3 archivo replica_5.parquet\n",
-      "--------- Escribiendo en S3 archivo replica_1.parquet\n",
-      "--------- Escribiendo en S3 archivo replica_4.parquet\n",
-      "--------- Escribiendo en S3 archivo replica_2.parquet\n",
-      "--------- Escribiendo en S3 archivo df_ejemplo.parquet\n",
-      "--------- Escribiendo en S3 archivo replica_9.parquet\n",
-      "--------- Escribiendo en S3 archivo replica_8.parquet\n",
-      "--------- Escribiendo en S3 archivo replica_0.parquet\n",
-      "--------- Escribiendo en S3 archivo replica_6.parquet\n",
-      "--------- Escribiendo en S3 archivo replica_3.parquet\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Escribimos todo en minio\n",
-    "parquet_files =  os.listdir(\"../data\")\n",
+    "parquet_files =  os.listdir(\"../data/\")\n",
+    "parquet_files = [file for file in parquet_files if \"parquet\" in file ]\n",
+    "\n",
     "bucket = \"capacitacion-lago-datos\"\n",
     "for file in parquet_files:\n",
     "    print(f\"--------- Escribiendo en S3 archivo {file}\")\n",
     "    minio_path = f\"{bucket}/data-ejemplo/{file}\"\n",
     "    file_path = f\"../data/{file}\"\n",
-    "    s3.put_file(lpath=file_path,rpath=minio_path)\n",
-    "\n",
-    "\n"
+    "    s3.put_file(lpath=file_path,rpath=minio_path)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "capacitacion-lago-datos/data-ejemplo/df_ejemplo.parquet\n",
-      "capacitacion-lago-datos/data-ejemplo/replica_0.parquet\n",
-      "capacitacion-lago-datos/data-ejemplo/replica_1.parquet\n",
-      "capacitacion-lago-datos/data-ejemplo/replica_2.parquet\n",
-      "capacitacion-lago-datos/data-ejemplo/replica_3.parquet\n",
-      "capacitacion-lago-datos/data-ejemplo/replica_4.parquet\n",
-      "capacitacion-lago-datos/data-ejemplo/replica_5.parquet\n",
-      "capacitacion-lago-datos/data-ejemplo/replica_6.parquet\n",
-      "capacitacion-lago-datos/data-ejemplo/replica_7.parquet\n",
-      "capacitacion-lago-datos/data-ejemplo/replica_8.parquet\n",
-      "capacitacion-lago-datos/data-ejemplo/replica_9.parquet\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Revisemos que todo haya quedado bien escrito\n",
     "files = s3.ls('capacitacion-lago-datos/data-ejemplo')\n",
@@ -330,111 +153,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   x   y\n",
-       "0  0   3\n",
-       "1  1   4\n",
-       "2  2   5\n",
-       "3  3   6\n",
-       "4  4   7\n",
-       "5  5   8\n",
-       "6  6   9\n",
-       "7  7  10\n",
-       "8  8  11\n",
-       "9  9  12"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Leer un archivo desde minio\n",
-    "minio_path = \"s3://capacitacion-lago-datos/data-ejemplo/df_ejemplo.parquet\"\n",
+    "minio_path = f\"s3://capacitacion-lago-datos/data-ejemplo/replica_1_{mi_nombre}.parquet\"\n",
     "parquet_example = pd.read_parquet(minio_path, filesystem=s3)\n",
     "parquet_example"
    ]
